# dungeon-sdl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dungeon-sdl.sln  dungeon-sdl.vcxproj  dungeon-sdl.vcxproj.filters  meson.build
include/: dict.h  game-errcode.h  game.h  game_unix.h  game_win.h  game_win32.h  logger.h  texmgr.h
shared/headers/: dict.h  game.h  logger.h  texmgr.h
shared/sources/: dict.c  game.c  logger.c  main.c  texmgr.c
src/: dict.c  game.c  game_unix.c  game_win.c  game_win32.c  logger.c  main.c  texmgr.c
unix/headers/: game_unix.h
unix/sources/: game_unix.c
windows/headers/: game_win32.h
windows/sources/: game_win32.c
